...
    static let baseHeight = CGFloat(325)
    static let minimumHeightOffsetCenter = CGFloat(20)

    @objc var sectionButtonsHidden = false
    @objc var computeButton = LargeButton(title: kUIFECompute)

    @objc var arrowButton = ArrowButton()
    @objc var backspaceButton = BackspaceButton()

    @objc var textButton = OperatorButton(symbol: kUIFEAddNewText)
    @objc var equalsButton = OperatorButton(symbol: "=")
    @objc var subtractionButton = OperatorButton(symbol: "-")
    @objc var additionButton = OperatorButton(symbol: "+")
    @objc var divisionButton = OperatorButton(symbol: "/")
...
