...

- (void)setupFormulaEditorKeyboard
{
    _keyboard = [[FormulaEditorKeyboardView alloc] initWithKeyboardWidth:CGRectGetWidth(self.view.bounds)];
    _keyboardAccessory = [[FormulaEditorKeyboardAccessoryView alloc] initWithKeyboardWidth:CGRectGetWidth(self.view.bounds)];

    _keyboardAccessory.accessibilityIdentifier = @"keyboardAccessoryView";
    [_keyboardAccessory.functionsButton addTarget:self action:@selector(showFunctionSection) forControlEvents:UIControlEventTouchUpInside];
    [_keyboardAccessory.propertiesButton addTarget:self action:@selector(showObjectSection) forControlEvents:UIControlEventTouchUpInside];
    [_keyboardAccessory.sensorsButton addTarget:self action:@selector(showSensorSection) forControlEvents:UIControlEventTouchUpInside];
    [_keyboardAccessory.logicButton addTarget:self action:@selector(showLogicSection) forControlEvents:UIControlEventTouchUpInside];
    [_keyboardAccessory.dataButton addTarget:self action:@selector(showDataSection) forControlEvents:UIControlEventTouchUpInside];
    [_keyboard.arrowButton addTarget:self action:@selector(arrowKeyTapped) forControlEvents:UIControlEventTouchUpInside];
...
