...
"A message with the same name already exists, try again." = "A message with the same name already exists, try again.";

/* No comment provided by engineer. */
"A project with the same name already exists, try again." = "A project with the same name already exists, try again.";

/* No comment provided by engineer. */
"Abc" = "Abc";

/* No comment provided by engineer. */
"About Catrobat" = "About Catrobat";

/* No comment provided by engineer. */
"About Pocket Code" = "About Pocket Code";
...
