...

/* No comment provided by engineer. */
"Add" = "Add";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Add image" = "Add image";

/* Action sheet menu title */
...

/* No comment provided by engineer. */
"Add object" = "Add object";

/* Action sheet menu title */
...

/* No comment provided by engineer. */
"Background" = "Background";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Backgrounds" = "Backgrounds";

/* paint */
...

/* No comment provided by engineer. */
"Cancel" = "Cancel";

/* bluetooth */
...

/* No comment provided by engineer. */
"Choose" = "Choose";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Done" = "Done";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Draw new image" = "Draw new image";

/* No comment provided by engineer. */
...

/* Placeholder for add object-name input field */
"Enter your object name here..." = "Enter your object name here...";

/* Placeholder for project-description input field */
...

/* No comment provided by engineer. */
"for all objects" = "for all objects";

/* No comment provided by engineer. */
...

/* Title of View where the user can see the frequently used bricks. */
"Frequently Used" = "Frequently Used";

/* No comment provided by engineer. */
...

/* LOOK */
"look" = "look";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Looks" = "Looks";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"New" = "New";

/* paint */
...

/* No comment provided by engineer. */
"New Variable" = "New Variable";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Next background" = "Next background";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"OK" = "OK";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Pocket Code" = "Pocket Code";

/* No comment provided by engineer. */
...

/* paint */
"Pocket Paint" = "Pocket Paint";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Save to PocketCode" = "Save to PocketCode";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Scripts" = "Scripts";

/* bluetooth */
...

/* No comment provided by engineer. */
"Set variable" = "Set variable";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Switch to look" = "Switch to look";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Var/List" = "Var/List";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Yes" = "Yes";

/* No comment provided by engineer. */
...
